Fixed the page bg color and footer alignment + style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,3 +24,7 @@ body{
 .custom-button:hover {
     background-color: #e2e2e2; /* Change to your desired hover color */
 }
+
+.custom-ul-text-white li.nav-item a.nav-link {
+    color: white; /* Set text color to white */
+}
